--- a/indenx.html
+++ b/indenx.html
@@ -46,15 +46,21 @@
     </header>
         
 <main>
-    <section class="Top_site">
+    <section class="Top-site">
         <div class="interface">
             <div class="flex">
                 <div class="txt-top-site">
                     <h1> Dênis Gomes Damas<span>.</span></h1>
-                </div>
+
+                    <p>Sou criativo, um pouco extrovetido, sei trabalha em equipe, tenho uma boa comunicação.</p>
+                    <div class="btn-contato">
+                        <a href="#">
+                            <button>Entre em Contato</button>
+                  </div>
             </div>
 
-            <div class="ima-top-site">
+            <div class="img-top-site">
+                <img src="imagens/foto 2.jpeg" alt="foto" width="300">
 
             </div>
 
