--- a/indenx.html
+++ b/indenx.html
@@ -115,7 +115,32 @@
     </section>
  <section class="Formulario">
     <div class="interfac">
-        <form action="">
+        <form action="#" method="post">
+            <div class="form-group">
+        <label for="nome">Nome</label>
+        <input type="text" id="nome" name="nome" required>
+      </div>
+
+      <div class="form-group">
+        <label for="telefone">Telefone</label>
+        <input type="tel" id="telefone" name="telefone"
+               pattern="^\s*\(?\d{2}\)?\s*\d{4,5}-?\d{4}\s*$"
+               placeholder="(00) 90000-0000"; required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="cpf">CPF</label>
+        <input type="text" id="cpf" name="cpf"
+               pattern="^\d{3}\.\d{3}\.\d{3}\-\d{2}$"
+               placeholder="000.000.000-00" required>
+      </div>
+
+      <button type="submit">Enviar</button>
 
             
         </form>
