--- a/indenx.html
+++ b/indenx.html
@@ -47,16 +47,14 @@
         
 <main>
     <section class="Top-site">
-        <div class="interface">
-            <div class="flex">
+        <div class="interface"></div>
+            <div class="flex"></div>
                 <div class="txt-top-site">
                     <h1> Dênis Gomes Damas<span>.</span></h1>
 
                     <p>Sou criativo, um pouco extrovetido, sei trabalha em equipe, tenho uma boa comunicação.</p>
                     <div class="btn-contato">
-                        <a href="#Formulario">Contato</a>
-                            <button>Entre em Contato</button>
-                  </div>
+                        <a href="#Formulario">
             </div>
 
             <div class="img-top-site">
@@ -70,11 +68,10 @@
     </section> 
 
     <section class="Cursos">
-        <div class="interface"></div>
+        <div class="interface">
             <h2 class="titulo">Cursos</h2>
-             <div class="flex">
 
-             </div>
+             <div class="flex"></div>
 
                 <div class="Cursos-box">
                     <i class="bi bi-filetype-html"></i>
@@ -99,20 +96,8 @@
 
 
             </div>
-
-
-
-
-
-        </div>
-
-
-
-
-
-
-
     </section>
+    
     <section class="Formulario" id="Formulario">
     <div class="interface">
         <form id="form">
