--- a/indenx.html
+++ b/indenx.html
@@ -46,26 +46,25 @@
     </header>
         
 <main>
-    <section class="Top-site">
-        <div class="interface"></div>
-            <div class="flex"></div>
+  <section class="Top-site">
+        <div class="interface">
+            <div class="flex-container"> 
+                
                 <div class="txt-top-site">
                     <h1> Dênis Gomes Damas<span>.</span></h1>
-
-                    <p>Sou criativo, um pouco extrovetido, sei trabalha em equipe, tenho uma boa comunicação.</p>
+                    <p>Sou criativo, um pouco extrovetido, sei trabalhar em equipe, tenho uma boa comunicação.</p>
                     <div class="btn-contato">
-                        <a href="#Formulario">
+                        <a href="#Formulario"></a>
+                    </div>
+                </div>
+
+                <div class="img-top-site">
+                    <img src="imagens/foto 2.jpeg" alt="foto">
+                </div>
+
             </div>
-
-            <div class="img-top-site">
-                <img src="imagens/foto 2.jpeg" alt="foto" width="400">
-
-            </div>
-
-
-
         </div>
-    </section> 
+    </section>> 
 
     <section class="Cursos">
         <div class="interface">
